# Reinforcement_Learning_Obstacle_Avoidance

./: .gitignore
src/: README.md
src/dqn_2_stage_4/: _model_configuration_20240508-143947.txt  stage4_episode1200.pkl  stage4_episode2600.pkl
src/enpm690_dqn/: package.xml  setup.cfg  setup.py
src/enpm690_dqn/enpm690_dqn/: dqn.py  dqn_envi.py  dqn_goals.py
src/model/enpm690_dqn/: __dqn_training_comparison.txt
src/model/enpm690_dqn/dqn_0_stage_4/: _model_configuration_20251107-121721.txt
src/model/enpm690_dqn/dqn_1_stage_4/: _model_configuration_20251107-121750.txt
src/model/enpm690_dqn/dqn_2_stage_4/: _model_configuration_20251107-121831.txt
src/model/enpm690_dqn/dqn_3_stage_4/: _model_configuration_20251107-122033.txt  _train_stage4_20251107-122033.txt  stage4_episode1.pkl  stage4_episode100.pkl  stage4_episode1000.pkl  stage4_episode1100.pkl  stage4_episode1200.pkl  stage4_episode1300.pkl
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle_pi/: model-1_4_.sdf  model.sdf
