<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>enpm690_dqn</name>
  <version>0.0.0</version>
  <description>ENPM690 Final Project - DQN</description>
  <maintainer email="suhas99@umd.edu">suhas</maintainer>
  <license>'Apache License, Version 2.0'</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>std_srvs</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
